# isir-internship

./: .gitignore  :w  README.md  flake.nix  justfile  pyproject.toml  todo.txt
paper/: paper.typ  template.typ
paper/figures/: env_bias_over_parameter_afu.html
paper/figures/mountaincar_action_critic/: justfile
paper/latex/: main.aux  main.bbl  main.bcf  main.blg  main.out  main.run.xml  main.tex  main.toc  references.bib
src/afu_rljax/algorithm/: __init__.py  afu.py  ddpg.py  sac.py  td3.py
src/afu_rljax/algorithm/base_class/: actor_critic.py  base_algorithm.py
src/afu_rljax/buffer/: prioritized_buffer.py  replay_buffer.py  rollout_buffer.py  segment_tree.py
src/afu_rljax/network/: __init__.py  actor.py  base.py  conv.py  critic.py  initializer.py
src/afu_rljax/plotting/: plotting_tools.py
src/afu_rljax/trainer/: base_trainer.py
src/afu_rljax/util/: __init__.py  distribution.py  optim.py
src/algos/: __init__.py  afcu.py  afu.py  afu2.py  afu3.py  afu4.py  afu_perrin.py  afup.py  afutqc.py  afutqc2.py  algo.py  main.py  mlp.py  msac.py  ndtop.py  networks.py  py.typed  replay.py  rl_algo.py  sac.py  sac2.py  simple_right.py  top.py  tqc.py  utils.py
src/tools/: compute_monte_carlo.py  compute_tqc_figure.py  compute_tqc_figure2.py  compute_tqc_monte_carlo.py  main.py  merge.py  train.py  utils.py  visualize.py  visualize_action_critic.py  visualize_bias.py  visualize_bias_evolution_over_time.py  visualize_bias_over_parameter.py  visualize_bias_parameter.py  visualize_bias_returns_correlation.py  visualize_bias_variance_scatter_plot.py  visualize_critic_policy.py  visualize_env_bias.py  visualize_env_figure.py  visualize_env_history.py  visualize_env_parameter.py  visualize_figure_critics.py  visualize_history.py  visualize_q_function_evolution_over_action.py  visualize_returns_over_parameter.py  visualize_returns_over_time.py  visualize_tqc_figure.py  visualize_tqc_figure2.py  visualize_tqc_mdp.py  visualize_training_curve.py
tests/: __init__.py  test_main.py
